language/move-lang/tests/move_check/typing/number_literal_too_large.move
module M {
    fun foo() {
        340282366920938463463374607431768211455;

        (340282366920938463463374607431768211454: u64);
        (340282366920938463463374607431768211454: u8);

        (18446744073709551616: u64);
        (18446744073709551616: u8);

        (18446744073709551615: u8);

        (256: u8);
    }
}
